[package]
name = "routing_example"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[dependencies]
error-chain = "0.11"
futures = "0.1.14"
hyper = "0.11"
regex = "0.2"
routing = { git = "https://github.com/dat2/routing" }
routing-derive = { git = "https://github.com/dat2/routing" }
# routing = { path = "../routing" }
# routing-derive = { path = "../routing/routing-derive" }
